# minesweeper

./: README  README.md  package.json  tailwind.config.js
.github/workflows/: ci.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: game.rs  main.rs
src/components/: Board.jsx  Cell.jsx  ClearButton.jsx  FlagCount.jsx  GameMenu.jsx
