[package]
name = "app"
version = "0.2.0"
description = "A Minesweeper Game"
authors = ["Nav"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0.81"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
tauri = { version = "1.0.0-rc.14", features = [] }

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
